--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  <!--   <video autoplay muted loop id="backgroundVid">
+  <video autoplay muted loop id="backgroundVid">
  <source src="video/portfolio.mp4" type="video/mp4">
-</video>-->
+</video>
 <h1 id="title">welcome the the outer workings of my brain.</h1>
 <div class="begin">
 <a id="startButton" href="work.html"> let's begin</a>
-</div>
-<div id="backgroundVid">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.3/lottie.js"></script>
-  <script src="index.js"></script>
-</div>
   </body>
 </html>
