--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <source src="video/portfolio.mp4" type="video/mp4">
 </video>
 <h1 id="title">welcome the the outer workings of my brain.</h1>
-<a id="startButton" href="work.html"> let's begin</a>
+<div id="begin">
+  <a id="startButton" href="work.html"> let's begin</a>
+</div>
   </body>
 </html>
