--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,16 @@
   <div class="socialinfo">
     <h2 class="contactpage">socials</h2>
   </div>
+  <div class="socialbutton">
+    <div id="inbutton">
+        <img src="images/in.png">
+        <a href="https://www.linkedin.com/in/nithyacharles/" target="_blank">
+    </div>
+    <div id="igbutton">
+        <img src="images/ig.png">
+        <a href="instagram.com/nithyacharles" target="_blank">
+    </div>
+      </div>
         </div>
   <!--  <div class="formcontainer"
   <form action="action_page.php">
